Switch display to initial to fix minor alignment issue

--- a/app/ui-react/packages/ui/src/Dashboard/RecentUpdatesItem.css
+++ b/app/ui-react/packages/ui/src/Dashboard/RecentUpdatesItem.css
@@ -1,7 +1,11 @@
 
 
 .recent-updates-item .list-view-pf-main-info {
-  display: inline-table;
+  display: initial;
+}
+
+.recent-updates-item .list-view-pf-description {
+  float: right;
 }
 
 .recent-updates-item .list-view-pf-left {
